--- a/lung_function/scripts/jupyter_notebooks/restore_mlrun.ipynb
+++ b/lung_function/scripts/jupyter_notebooks/restore_mlrun.ipynb
@@ -13,15 +13,23 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "run_id: 6604e19181454491b44a11e3259d2b4a; lifecycle_stage: active\n"
+     ]
+    }
+   ],
    "source": [
     "mlflow.set_tracking_uri(\"http://nodelogin02:5000\")\n",
     "experiment = mlflow.set_experiment(\"lung_fun_db15\")\n",
     "\n",
     "# Create a run under the default experiment (whose id is '0').\n",
     "client = mlflow.MlflowClient()\n",
-    "for i in range(309, 311):\n",
-    "    experiment_id = i\n",
+    "for i in range(1):\n",
+    "    experiment_id = 307\n",
     "    run_ls = client.search_runs(experiment_ids=[experiment.experiment_id], run_view_type=2, filter_string=f\"params.id LIKE '%{i}%'\")\n",
     "    if len(run_ls)!=0:\n",
     "        run_ = run_ls[0]\n",
