--- a/lung_function/scripts/jupyter_notebooks/check_dataset.ipynb
+++ b/lung_function/scripts/jupyter_notebooks/check_dataset.ipynb
@@ -2,14 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
     "from glob import glob\n",
     "from medutils.medutils import load_itk, save_itk\n",
     "import matplotlib.pyplot as plt\n",
-    "from tqdm import tqdm"
+    "from tqdm import tqdm\n",
+    "import json"
    ]
   },
   {
@@ -54,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
@@ -72,7 +73,7 @@
        "333"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -84,14 +85,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 333/333 [01:58<00:00,  2.80it/s]\n"
+      "100%|██████████| 333/333 [02:01<00:00,  2.75it/s]\n"
      ]
     }
    ],
@@ -168,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -458,6 +459,7 @@
     "'8278747',\n",
     "'8303176',\n",
     "'8321228',\n",
+    "'8334199',\n",
     "'8353193',\n",
     "'8365740',\n",
     "'8369484',\n",
@@ -510,22 +512,81 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "e = set(data_split_dt['valid_fold1']) | set(data_split_dt['valid_fold2']) | set(data_split_dt['valid_fold3']) | set(data_split_dt['valid_fold4']) | set(data_split_dt['test'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('data_split.json', \"w\") as f:\n",
+    "    json.dump(data_split_dt, f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "63"
+       "317"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "len(data_split_dt['valid_fold1'])"
+    "len(e)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "317"
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "set()"
+      ]
+     },
+     "execution_count": 64,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "set(b) - e"
    ]
   },
   {
@@ -632,7 +693,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
+   "version": "3.8.13 (default, Mar 28 2022, 11:38:47) \n[GCC 7.5.0]"
   },
   "orig_nbformat": 4,
   "vscode": {
