--- a/lung_function/scripts/jupyter_notebooks/verify_icc.ipynb
+++ b/lung_function/scripts/jupyter_notebooks/verify_icc.ipynb
@@ -482,113 +482,6 @@
    "source": [
     "icc_dict"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 54,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "True\n",
-      "[INFO] Register count_convNd() for <class 'torch.nn.modules.conv.Conv2d'>.\n",
-      "[INFO] Register count_normalization() for <class 'torch.nn.modules.batchnorm.BatchNorm2d'>.\n",
-      "[INFO] Register zero_ops() for <class 'torch.nn.modules.activation.ReLU'>.\n",
-      "[INFO] Register zero_ops() for <class 'torch.nn.modules.pooling.MaxPool2d'>.\n",
-      "[INFO] Register zero_ops() for <class 'torch.nn.modules.container.Sequential'>.\n",
-      "[INFO] Register count_adap_avgpool() for <class 'torch.nn.modules.pooling.AdaptiveAvgPool2d'>.\n",
-      "[INFO] Register count_linear() for <class 'torch.nn.modules.linear.Linear'>.\n",
-      "True\n"
-     ]
-    }
-   ],
-   "source": [
-    "from torchvision.models import resnet50\n",
-    "from thop import profile\n",
-    "import torch\n",
-    "model = resnet50()\n",
-    "input = torch.randn(1, 3, 224, 224)\n",
-    "print(model.training)\n",
-    "macs, params = profile(model, inputs=(input, ))\n",
-    "print(model.training)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 55,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "False\n",
-      "[INFO] Register count_convNd() for <class 'torch.nn.modules.conv.Conv2d'>.\n",
-      "[INFO] Register count_normalization() for <class 'torch.nn.modules.batchnorm.BatchNorm2d'>.\n",
-      "[INFO] Register zero_ops() for <class 'torch.nn.modules.activation.ReLU'>.\n",
-      "[INFO] Register zero_ops() for <class 'torch.nn.modules.pooling.MaxPool2d'>.\n",
-      "[INFO] Register zero_ops() for <class 'torch.nn.modules.container.Sequential'>.\n",
-      "[INFO] Register count_adap_avgpool() for <class 'torch.nn.modules.pooling.AdaptiveAvgPool2d'>.\n",
-      "[INFO] Register count_linear() for <class 'torch.nn.modules.linear.Linear'>.\n",
-      "False\n"
-     ]
-    }
-   ],
-   "source": [
-    "model.eval()\n",
-    "print(model.training)\n",
-    "macs, params = profile(model, inputs=(input, ))\n",
-    "print(model.training)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 53,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "4.133742592000001"
-      ]
-     },
-     "execution_count": 53,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "macs/1000/1000/1000"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 51,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "20.72926832433555"
-      ]
-     },
-     "execution_count": 51,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "params/1024/1204"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -607,7 +500,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
+   "version": "3.8.13 (default, Mar 28 2022, 11:38:47) \n[GCC 7.5.0]"
   },
   "orig_nbformat": 4,
   "vscode": {
