--- a/lung_function/scripts/jupyter_notebooks/dimensionality_reduction.ipynb
+++ b/lung_function/scripts/jupyter_notebooks/dimensionality_reduction.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,12 +10,19 @@
     "\n",
     "import torch\n",
     "import csv\n",
-    "import torch.nn as nn\n",
-    "import torch.nn.functional as F\n",
-    "from sklearn.manifold import TSNE\n",
     "\n",
+    "from sklearn.manifold import TSNE\n",
     "from sklearn.decomposition import PCA, TruncatedSVD\n",
-    "\n"
+    "from tqdm import tqdm\n",
+    "\n",
+    "from lung_function.modules.networks import get_net_3d\n",
+    "from lung_function.modules.set_args import get_args\n",
+    "from lung_function.modules.path import PFTPath\n",
+    "from lung_function.modules.datasets import all_loaders\n",
+    "from lung_function.modules import provider\n",
+    "\n",
+    "import sys\n",
+    "sys.path.append(\"../../modules/networks/models_pcd\")\n"
    ]
   },
   {
@@ -28,11 +35,464 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# load network"
+    "args = get_args(jupyter=True)\n",
+    "\n",
+    "# specify the run id and fold\n",
+    "args.id = 1655\n",
+    "args.fold = 1\n",
+    "args.pointnet_fc_ls = '1024-128'\n",
+    "mypath = PFTPath(args.id, check_id_dir=False, space=args.ct_sp)\n",
+    "device = torch.device(\"cuda:0\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# load network\n",
+    "target = [i.lstrip() for i in args.target.split('-')]\n",
+    "pointnet_fc_ls =  [int(i) for i in args.pointnet_fc_ls.split('-')]\n",
+    "net = get_net_3d(name=args.net, nb_cls=len(target), image_size=args.x_size,\n",
+    "                              pretrained=args.pretrained_imgnet, pointnet_fc_ls=pointnet_fc_ls, loss=args.loss,\n",
+    "                              dp_fc1_flag = args.dp_fc1_flag)  # output FVC and FEV1\n",
+    "\n",
+    "# load weights\n",
+    "\n",
+    "ckpt = torch.load(mypath.model_fpath, map_location=device)\n",
+    "\n",
+    "if type(ckpt) is dict and 'model' in ckpt:\n",
+    "    model = ckpt['model']\n",
+    "else:\n",
+    "    model = ckpt\n",
+    "# model_fpath need to exist\n",
+    "net.load_state_dict(model, strict=False)\n",
+    "# move the new initialized layers to GPU\n",
+    "net = net.to(device)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-----\n",
+      "SSc_patient_0068800\n",
+      "SSc_patient_0152440\n",
+      "SSc_patient_0163750\n",
+      "SSc_patient_0213786\n",
+      "SSc_patient_0219312\n",
+      "SSc_patient_0222357\n",
+      "SSc_patient_0234084\n",
+      "SSc_patient_0242508\n",
+      "SSc_patient_0277377\n",
+      "SSc_patient_0280727\n",
+      "SSc_patient_0298877\n",
+      "SSc_patient_0315457\n",
+      "SSc_patient_0315573\n",
+      "SSc_patient_0343115\n",
+      "SSc_patient_0376540\n",
+      "SSc_patient_0385738\n",
+      "SSc_patient_0456204\n",
+      "SSc_patient_0509944\n",
+      "SSc_patient_0534778\n",
+      "SSc_patient_0553478\n",
+      "SSc_patient_0573200\n",
+      "SSc_patient_0611832\n",
+      "SSc_patient_0639432\n",
+      "SSc_patient_0703966\n",
+      "SSc_patient_0787506\n",
+      "SSc_patient_0911478\n",
+      "SSc_patient_0992750\n",
+      "SSc_patient_1043946\n",
+      "SSc_patient_1066422\n",
+      "SSc_patient_1100289\n",
+      "SSc_patient_1105441\n",
+      "SSc_patient_1146160\n",
+      "SSc_patient_1160750\n",
+      "SSc_patient_1199412\n",
+      "SSc_patient_1236033\n",
+      "SSc_patient_1239567\n",
+      "SSc_patient_1239678\n",
+      "SSc_patient_1278925\n",
+      "SSc_patient_1280678\n",
+      "SSc_patient_1293386\n",
+      "SSc_patient_1301116\n",
+      "SSc_patient_1321066\n",
+      "SSc_patient_1326574\n",
+      "SSc_patient_1329481\n",
+      "SSc_patient_1329821\n",
+      "SSc_patient_1333231\n",
+      "SSc_patient_1348417\n",
+      "SSc_patient_1391017\n",
+      "SSc_patient_1397732\n",
+      "SSc_patient_1475468\n",
+      "SSc_patient_1499510\n",
+      "SSc_patient_1564714\n",
+      "SSc_patient_1849599\n",
+      "SSc_patient_1945530\n",
+      "SSc_patient_1947009\n",
+      "SSc_patient_1949476\n",
+      "SSc_patient_2081982\n",
+      "SSc_patient_2088579\n",
+      "SSc_patient_2090024\n",
+      "SSc_patient_2155673\n",
+      "SSc_patient_2178130\n",
+      "SSc_patient_2178492\n",
+      "SSc_patient_2196024\n",
+      "SSc_patient_2228633\n",
+      "SSc_patient_2252561\n",
+      "SSc_patient_2253442\n",
+      "SSc_patient_2273070\n",
+      "SSc_patient_2279798\n",
+      "SSc_patient_2289311\n",
+      "SSc_patient_2323272\n",
+      "SSc_patient_2332035\n",
+      "SSc_patient_2332755\n",
+      "SSc_patient_2333560\n",
+      "SSc_patient_2340524\n",
+      "SSc_patient_2341332\n",
+      "SSc_patient_2346390\n",
+      "SSc_patient_2352142\n",
+      "SSc_patient_2396084\n",
+      "SSc_patient_2524918\n",
+      "SSc_patient_2550514\n",
+      "SSc_patient_2742894\n",
+      "SSc_patient_3021822\n",
+      "SSc_patient_3034278\n",
+      "SSc_patient_3102570\n",
+      "SSc_patient_3154090\n",
+      "SSc_patient_3191882\n",
+      "SSc_patient_3195140\n",
+      "SSc_patient_3221222\n",
+      "SSc_patient_3228438\n",
+      "SSc_patient_3243752\n",
+      "SSc_patient_3261564\n",
+      "SSc_patient_3295904\n",
+      "SSc_patient_3298040\n",
+      "SSc_patient_3310402\n",
+      "SSc_patient_3345741\n",
+      "SSc_patient_3588476\n",
+      "SSc_patient_3901150\n",
+      "SSc_patient_4084886\n",
+      "SSc_patient_4107789\n",
+      "SSc_patient_4125990\n",
+      "SSc_patient_4171220\n",
+      "SSc_patient_4205284\n",
+      "SSc_patient_4243706\n",
+      "SSc_patient_4254486\n",
+      "SSc_patient_4280811\n",
+      "SSc_patient_4433856\n",
+      "SSc_patient_4628660\n",
+      "SSc_patient_4983258\n",
+      "SSc_patient_5036012\n",
+      "SSc_patient_5058580\n",
+      "SSc_patient_5102202\n",
+      "SSc_patient_5112278\n",
+      "SSc_patient_5138064\n",
+      "SSc_patient_5150048\n",
+      "SSc_patient_5157102\n",
+      "SSc_patient_5174713\n",
+      "SSc_patient_5235284\n",
+      "SSc_patient_5240010\n",
+      "SSc_patient_5242717\n",
+      "SSc_patient_5262908\n",
+      "SSc_patient_5271048\n",
+      "SSc_patient_5289050\n",
+      "SSc_patient_5301625\n",
+      "SSc_patient_5305785\n",
+      "SSc_patient_5321814\n",
+      "SSc_patient_5323286\n",
+      "SSc_patient_5337916\n",
+      "SSc_patient_5434722\n",
+      "SSc_patient_5453856\n",
+      "SSc_patient_5574126\n",
+      "SSc_patient_5576984\n",
+      "SSc_patient_5652668\n",
+      "SSc_patient_5869896\n",
+      "SSc_patient_6014042\n",
+      "SSc_patient_6023278\n",
+      "SSc_patient_6056082\n",
+      "SSc_patient_6085323\n",
+      "SSc_patient_6096786\n",
+      "SSc_patient_6122288\n",
+      "SSc_patient_6166756\n",
+      "SSc_patient_6180838\n",
+      "SSc_patient_6182262\n",
+      "SSc_patient_6216723\n",
+      "SSc_patient_6226529\n",
+      "SSc_patient_6238704\n",
+      "SSc_patient_6258975\n",
+      "SSc_patient_6301947\n",
+      "SSc_patient_6315736\n",
+      "SSc_patient_6327090\n",
+      "SSc_patient_6329587\n",
+      "SSc_patient_6351267\n",
+      "SSc_patient_6389435\n",
+      "SSc_patient_6424242\n",
+      "SSc_patient_6452458\n",
+      "SSc_patient_6484444\n",
+      "SSc_patient_6587088\n",
+      "SSc_patient_6638152\n",
+      "SSc_patient_6793758\n",
+      "SSc_patient_6960927\n",
+      "SSc_patient_7135410\n",
+      "SSc_patient_7147200\n",
+      "SSc_patient_7178384\n",
+      "SSc_patient_7189918\n",
+      "SSc_patient_7190208\n",
+      "SSc_patient_7190978\n",
+      "SSc_patient_7211564\n",
+      "SSc_patient_7218578\n",
+      "SSc_patient_7219422\n",
+      "SSc_patient_7234049\n",
+      "SSc_patient_7234834\n",
+      "SSc_patient_7238630\n",
+      "SSc_patient_7241891\n",
+      "SSc_patient_7247972\n",
+      "SSc_patient_7252792\n",
+      "SSc_patient_7325831\n",
+      "SSc_patient_7329394\n",
+      "SSc_patient_7349316\n",
+      "SSc_patient_7417242\n",
+      "SSc_patient_7421048\n",
+      "SSc_patient_7470316\n",
+      "SSc_patient_7502118\n",
+      "SSc_patient_7549628\n",
+      "SSc_patient_7582492\n",
+      "SSc_patient_7584898\n",
+      "SSc_patient_7628640\n",
+      "SSc_patient_7694688\n",
+      "SSc_patient_7740702\n",
+      "SSc_patient_7794304\n",
+      "SSc_patient_7852072\n",
+      "SSc_patient_7886110\n",
+      "-----\n",
+      "SSc_patient_0127512\n",
+      "SSc_patient_0139552\n",
+      "SSc_patient_0143788\n",
+      "SSc_patient_0265042\n",
+      "SSc_patient_0320142\n",
+      "SSc_patient_0458234\n",
+      "SSc_patient_0485784\n",
+      "SSc_patient_0530988\n",
+      "SSc_patient_0584534\n",
+      "SSc_patient_1067426\n",
+      "SSc_patient_1218579\n",
+      "SSc_patient_1244023\n",
+      "SSc_patient_1513875\n",
+      "SSc_patient_1539510\n",
+      "SSc_patient_1759534\n",
+      "SSc_patient_1987028\n",
+      "SSc_patient_2087864\n",
+      "SSc_patient_2131790\n",
+      "SSc_patient_2151769\n",
+      "SSc_patient_2164051\n",
+      "SSc_patient_2201630\n",
+      "SSc_patient_2211458\n",
+      "SSc_patient_2342421\n",
+      "SSc_patient_2712128\n",
+      "SSc_patient_2947950\n",
+      "SSc_patient_3026442\n",
+      "SSc_patient_3202420\n",
+      "SSc_patient_3237589\n",
+      "SSc_patient_3239347\n",
+      "SSc_patient_3567342\n",
+      "SSc_patient_3729608\n",
+      "SSc_patient_4036570\n",
+      "SSc_patient_4119066\n",
+      "SSc_patient_4160061\n",
+      "SSc_patient_4319832\n",
+      "SSc_patient_4414878\n",
+      "SSc_patient_4945176\n",
+      "SSc_patient_5095311\n",
+      "SSc_patient_5202686\n",
+      "SSc_patient_5261000\n",
+      "SSc_patient_5299407\n",
+      "SSc_patient_5313911\n",
+      "SSc_patient_5325396\n",
+      "SSc_patient_5341694\n",
+      "SSc_patient_5352138\n",
+      "SSc_patient_5813928\n",
+      "SSc_patient_5986430\n",
+      "SSc_patient_6001651\n",
+      "SSc_patient_6047721\n",
+      "SSc_patient_6145432\n",
+      "SSc_patient_6224742\n",
+      "SSc_patient_6318939\n",
+      "SSc_patient_6339687\n",
+      "SSc_patient_6366968\n",
+      "SSc_patient_6417808\n",
+      "SSc_patient_6475311\n",
+      "SSc_patient_6503304\n",
+      "SSc_patient_6533637\n",
+      "SSc_patient_7114639\n",
+      "SSc_patient_7120342\n",
+      "SSc_patient_7316368\n",
+      "SSc_patient_7324318\n",
+      "SSc_patient_7331122\n",
+      "-----\n",
+      "SSc_patient_7957098\n",
+      "SSc_patient_7977032\n",
+      "SSc_patient_8077626\n",
+      "SSc_patient_8160998\n",
+      "SSc_patient_8189796\n",
+      "SSc_patient_8211617\n",
+      "SSc_patient_8221364\n",
+      "SSc_patient_8223034\n",
+      "SSc_patient_8229975\n",
+      "SSc_patient_8235036\n",
+      "SSc_patient_8238603\n",
+      "SSc_patient_8256587\n",
+      "SSc_patient_8258466\n",
+      "SSc_patient_8277297\n",
+      "SSc_patient_8278747\n",
+      "SSc_patient_8303176\n",
+      "SSc_patient_8321228\n",
+      "SSc_patient_8353193\n",
+      "SSc_patient_8365740\n",
+      "SSc_patient_8369484\n",
+      "SSc_patient_8453542\n",
+      "SSc_patient_8492153\n",
+      "SSc_patient_8595550\n",
+      "SSc_patient_8784276\n",
+      "SSc_patient_8906834\n",
+      "SSc_patient_8909491\n",
+      "SSc_patient_8910414\n",
+      "SSc_patient_8920576\n",
+      "SSc_patient_8960279\n",
+      "SSc_patient_9035012\n",
+      "SSc_patient_9071115\n",
+      "SSc_patient_9075370\n",
+      "SSc_patient_9075756\n",
+      "SSc_patient_9091134\n",
+      "SSc_patient_9095122\n",
+      "SSc_patient_9096866\n",
+      "SSc_patient_9132826\n",
+      "SSc_patient_9160660\n",
+      "SSc_patient_9163194\n",
+      "SSc_patient_9181748\n",
+      "SSc_patient_9224744\n",
+      "SSc_patient_9234835\n",
+      "SSc_patient_9239682\n",
+      "SSc_patient_9241693\n",
+      "SSc_patient_9251372\n",
+      "SSc_patient_9270279\n",
+      "SSc_patient_9272348\n",
+      "SSc_patient_9278164\n",
+      "SSc_patient_9298526\n",
+      "SSc_patient_9300979\n",
+      "SSc_patient_9322299\n",
+      "SSc_patient_9345657\n",
+      "SSc_patient_9348452\n",
+      "SSc_patient_9359921\n",
+      "SSc_patient_9364092\n",
+      "SSc_patient_9367440\n",
+      "SSc_patient_9445880\n",
+      "SSc_patient_9523013\n",
+      "SSc_patient_9662556\n",
+      "SSc_patient_9861781\n",
+      "SSc_patient_9934096\n",
+      "SSc_patient_9939136\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Loading dataset: 100%|██████████| 190/190 [00:33<00:00,  5.67it/s]\n",
+      "Loading dataset: 100%|██████████| 63/63 [00:09<00:00,  6.50it/s]\n",
+      "Loading dataset: 100%|██████████| 62/62 [00:09<00:00,  6.52it/s]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# load dataset\n",
+    "data_dt = all_loaders(mypath.data_dir, mypath.label_fpath, args)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 10/10 [00:00<00:00, 14.96it/s]\n",
+      "100%|██████████| 4/4 [00:00<00:00, 15.94it/s]\n",
+      "100%|██████████| 4/4 [00:00<00:00, 15.68it/s]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Obtain features\n",
+    "net.eval()\n",
+    "feature_dt = {'train', [], 'valid', [], 'test', []}\n",
+    "for mode in ['train', 'valid', 'test']:\n",
+    "    dataloader = data_dt[mode]\n",
+    "    for data in tqdm(dataloader):\n",
+    "        if args.input_mode == 'vessel':\n",
+    "            key = 'vessel'\n",
+    "        elif args.input_mode == 'vessel_skeleton_pcd':\n",
+    "            key = 'vessel_skeleton_pcd'\n",
+    "            points = data[key].data.numpy()\n",
+    "            if points.shape[0] == 1:  # batch size=1\n",
+    "                points = np.concatenate([points, points])\n",
+    "                data['label'] = np.concatenate(\n",
+    "                    [data['label'], data['label']])\n",
+    "                data['label'] = torch.tensor(data['label'])\n",
+    "\n",
+    "            points = provider.random_point_dropout(points)\n",
+    "            points[:, :, 0:3] = provider.random_scale_point_cloud(\n",
+    "                points[:, :, 0:3])\n",
+    "            points[:, :, 0:3] = provider.shift_point_cloud(\n",
+    "                points[:, :, 0:3])\n",
+    "            points = torch.Tensor(points)\n",
+    "            points = points.transpose(2, 1)\n",
+    "            data[key] = points\n",
+    "        elif 'ct_masked_by_vessel' in args.input_mode:\n",
+    "            key = args.input_mode\n",
+    "\n",
+    "        else:\n",
+    "            key = 'image'\n",
+    "        batch_x = data[key].to(device)\n",
+    "        batch_y = data['label'].to(device)\n",
+    "\n",
+    "        with torch.cuda.amp.autocast():\n",
+    "            with torch.no_grad():\n",
+    "                x, trans, trans_feat = net.feat(batch_x)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([2, 1024])"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x.shape"
    ]
   },
   {
@@ -41,16 +501,31 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# load dataset"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# save features"
+    "# save features\n",
+    "\n",
+    "head = ['pat_id']\n",
+    "head.extend(self.target)\n",
+    "\n",
+    "batch_pat_id = data['pat_id'].cpu(\n",
+    ").detach().numpy()  # shape (N,1)\n",
+    "batch_pat_id = int2str(batch_pat_id)  # shape (N,1)\n",
+    "\n",
+    "batch_y_np = batch_y.cpu().detach().numpy()  # shape (N, out_nb)\n",
+    "pred_np = pred.cpu().detach().numpy()  # shape (N, out_nb)\n",
+    "# batch_pat_id = np.expand_dims(batch_pat_id, axis=-1)  # change the shape from (N,) to (N, 1)\n",
+    "\n",
+    "# shape (1,1)\n",
+    "if args.input_mode == 'vessel_skeleton_pcd' and len(batch_pat_id) == 1:\n",
+    "    batch_pat_id = np.array(\n",
+    "        [[int(batch_pat_id[0])], [int(batch_pat_id[0])]])\n",
+    "    batch_pat_id = torch.tensor(batch_pat_id)\n",
+    "\n",
+    "saved_label = np.hstack((batch_pat_id, batch_y_np))\n",
+    "saved_pred = np.hstack((batch_pat_id, pred_np))\n",
+    "medutils.appendrows_to(self.mypath.save_label_fpath(\n",
+    "    mode), saved_label, head=head)\n",
+    "medutils.appendrows_to(\n",
+    "    self.mypath.save_pred_fpath(mode), saved_pred, head=head)"
    ]
   },
   {
