--- a/lung_function/scripts/jupyter_notebooks/dimensionality_reduction.ipynb
+++ b/lung_function/scripts/jupyter_notebooks/dimensionality_reduction.ipynb
@@ -422,23 +422,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 10/10 [00:00<00:00, 14.96it/s]\n",
-      "100%|██████████| 4/4 [00:00<00:00, 15.94it/s]\n",
-      "100%|██████████| 4/4 [00:00<00:00, 15.68it/s]\n"
+      "100%|██████████| 10/10 [00:00<00:00, 11.92it/s]\n",
+      "100%|██████████| 4/4 [00:00<00:00, 16.53it/s]\n",
+      "100%|██████████| 4/4 [00:00<00:00, 17.07it/s]\n"
      ]
     }
    ],
    "source": [
     "# Obtain features\n",
     "net.eval()\n",
-    "feature_dt = {'train', [], 'valid', [], 'test', []}\n",
+    "feature_dt = {'train': [], 'valid': [], 'test': []}\n",
     "for mode in ['train', 'valid', 'test']:\n",
     "    dataloader = data_dt[mode]\n",
     "    for data in tqdm(dataloader):\n",
@@ -472,27 +472,28 @@
     "        with torch.cuda.amp.autocast():\n",
     "            with torch.no_grad():\n",
     "                x, trans, trans_feat = net.feat(batch_x)\n",
+    "        feature_dt[mode].append(x.detach().cpu().numpy())\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "torch.Size([2, 1024])"
+       "torch.Size([2, 4, 7000])"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "x.shape"
+    "batch_x.shape"
    ]
   },
   {
