--- a/lung_function/scripts/jupyter_notebooks/vessel_skeleton_point_cloud.ipynb
+++ b/lung_function/scripts/jupyter_notebooks/vessel_skeleton_point_cloud.ipynb
@@ -2,16 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/jjia/.local/lib/python3.8/site-packages/outdated/utils.py:14: OutdatedPackageWarning: The package outdated is out of date. Your version is 0.2.1, the latest is 0.2.2.\n",
+      "The package pingouin is out of date. Your version is 0.5.2, the latest is 0.5.3.\n",
       "Set the environment variable OUTDATED_IGNORE=1 to disable these warnings.\n",
-      "  return warn(\n"
+      "The package outdated is out of date. Your version is 0.2.1, the latest is 0.2.2.\n",
+      "Set the environment variable OUTDATED_IGNORE=1 to disable these warnings.\n"
      ]
     }
    ],
@@ -827,6 +828,67 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "skl_ls = sorted(glob('/home/jjia/data/dataset/lung_function/ori_resolution/SSc_patient_???????_skeleton_coordinates140000.pt'))\n",
+    "ori_ls = sorted(glob('/home/jjia/data/dataset/lung_function/ori_resolution/SSc_patient_???????_skeleton_coordinates140000.pt'))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = skl_ls[1]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(a, 'rb') as f:\n",
+    "    data_dt = pickle.load(f)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tmp_ls = []\n",
+    "for row in data_dt['data']:\n",
+    "    if not row[0]%1 and not row[1]%1 and not row[2]%1:\n",
+    "        tmp_ls.append(row)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "62354"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(tmp_ls)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -849,7 +911,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13 (default, Mar 28 2022, 11:38:47) \n[GCC 7.5.0]"
+   "version": "3.8.13"
   },
   "orig_nbformat": 4,
   "vscode": {
