--- a/lung_function/scripts/jupyter_notebooks/calculate_reference.ipynb
+++ b/lung_function/scripts/jupyter_notebooks/calculate_reference.ipynb
@@ -982,6 +982,153 @@
     "# 显示图像\n",
     "plt.show()\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 159,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0     2.146552\n",
+       "1     2.498182\n",
+       "2     2.644898\n",
+       "3     3.608081\n",
+       "4     2.886813\n",
+       "        ...   \n",
+       "57    4.137805\n",
+       "58    3.622549\n",
+       "59    3.414000\n",
+       "60    2.160606\n",
+       "61    2.306061\n",
+       "Length: 62, dtype: float64"
+      ]
+     },
+     "execution_count": 159,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_net_ts_pred['FEV1'] / test_df_slim['FEV1PP']*100"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 161,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "MAPE_FEV1 = ((df_net_ts_pred['FEV1'] - test_df_slim['FEV1']).abs()/test_df_slim['FEV1']).sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 167,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "MAPE_FEV1PP = ((df_net_ts_pred['FEV1'] - test_df_slim['FEV1PP']).abs()/test_df_slim['FEV1PP']).sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 162,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "10.151414022272814"
+      ]
+     },
+     "execution_count": 162,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "MAPE_FEV1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 168,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "58.299997508762516"
+      ]
+     },
+     "execution_count": 168,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "MAPE_FEV1PP"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 152,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "29.34071995927858"
+      ]
+     },
+     "execution_count": 152,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "MAPE_FEV1PP"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 166,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0     0.0\n",
+       "1     0.0\n",
+       "2     0.0\n",
+       "3     0.0\n",
+       "4     0.0\n",
+       "     ... \n",
+       "57    0.0\n",
+       "58    0.0\n",
+       "59    0.0\n",
+       "60    0.0\n",
+       "61    0.0\n",
+       "Name: FEV1PP, Length: 62, dtype: float64"
+      ]
+     },
+     "execution_count": 166,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(df_net_ts_pred['FEV1PP'] - df_net_ts_pred['FEV1PP']).abs()/df_net_ts_pred['FEV1PP']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
