--- a/lung_function/scripts/jupyter_notebooks/merge_4fold_testing.ipynb
+++ b/lung_function/scripts/jupyter_notebooks/merge_4fold_testing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
+    "# for old experiments\n",
     "fold_ex_dt_torso = {0:2142, 1:2143, 2:2154, 3:2167, 4:2180, 'name':'torso'}\n",
     "fold_ex_dt_lung = {0:2144, 1:2145, 2:2158, 3:2171, 4:2185, 'name':'lung'}\n",
     "fold_ex_dt_vessel = {0:2148, 1:2149, 2:2159, 3:2172, 4:2189, 'name':'vessel'}\n",
@@ -27,37 +27,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/home/jjia/data/lung_function/lung_function/scripts/results/experiments/2142/test_pred.csv\n",
-      "/home/jjia/data/lung_function/lung_function/scripts/results/experiments/2144/test_pred.csv\n",
-      "/home/jjia/data/lung_function/lung_function/scripts/results/experiments/2148/test_pred.csv\n",
-      "/home/jjia/data/lung_function/lung_function/scripts/results/experiments/2258/test_pred.csv\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "parent_dir = '/home/jjia/data/lung_function/lung_function/scripts/results/experiments/'\n",
+    "# for new experiments\n",
+    "fold_ex_dt_1 = {0:2521, 1:2522, 2:2531, 3:2544, 4:2545, 'name':''}\n",
+    "fold_ex_dt_2 = {0:2527, 1:2528, 2:2546, 3:2556, 4:2566, 'name':''}\n",
+    "fold_ex_dt_3 = {0:2529, 1:2530, 2:2547, 3:2557, 4:2567, 'name':''}\n",
+    "fold_ex_dt_4 = {0:2532, 1:2533, 2:2548, 3:2558, 4:2579, 'name':''}\n",
     "\n",
-    "for fold_ex_dt in fold_ex_dt_ls:\n",
-    "    dir0 = parent_dir + str(fold_ex_dt[0])\n",
-    "    ave_fpath =dir0  + '/test_pred.csv'\n",
-    "    output_file_path = Path(ave_fpath)\n",
-    "    output_file_path.parent.mkdir(parents=True, exist_ok=True)\n",
-    "    \n",
-    "    df_ls = []\n",
-    "    for i in [1,2,3,4]:\n",
-    "        data_fpath = parent_dir + str(fold_ex_dt[i]) + '/test_pred.csv'\n",
-    "        df = pd.read_csv(data_fpath)\n",
-    "        df_ls.append(df)\n",
-    "    df_ave = (df_ls[0] + df_ls[1] + df_ls[2] + df_ls[3])/4\n",
-    "    df_ave.to_csv(ave_fpath)\n",
-    "    print(ave_fpath)\n",
+    "fold_ex_dt_5 = {0:2534, 1:2535, 2:2553, 3:2563, 4:2588, 'name':''}\n",
+    "fold_ex_dt_6 = {0:2536, 1:2537, 2:2552, 3:2562, 4:2587, 'name':''}\n",
+    "fold_ex_dt_7 = {0:2538, 1:2539, 2:2551, 3:2561, 4:2586, 'name':''}\n",
+    "fold_ex_dt_8 = {0:2540, 1:2541, 2:2549, 3:2559, 4:2578, 'name':''}\n",
+    "\n",
+    "fold_ex_dt_a = {0:2542, 1:2543, 2:2550, 3:2560, 4:2581, 'name':''}\n",
+    "fold_ex_dt_b = {0:2568, 1:2569, 2:2580, 3:2590, 4:2599, 'name':''}\n",
+    "fold_ex_dt_c = {0:2570, 1:2571, 2:2582, 3:2589, 4:2597, 'name':''}\n",
+    "fold_ex_dt_d = {0:2572, 1:2573, 2:2583, 3:2592, 4:2598, 'name':''}\n",
+    "\n",
+    "fold_ex_dt_e = {0:2574, 1:2575, 2:2585, 3:2593, 4:2602, 'name':''}\n",
+    "fold_ex_dt_f = {0:2576, 1:2577, 2:2584, 3:2591, 4:2596, 'name':''}\n",
+    "fold_ex_dt_g = {0:2594, 1:2595, 2:2604, 3:2612, 4:2616, 'name':''}\n",
+    "fold_ex_dt_h = {0:2600, 1:2601, 2:2603, 3:2609, 4:2613, 'name':''}\n",
+    "\n",
+    "fold_ex_dt_i = {0:2605, 1:2606, 2:2610, 3:2614, 4:2617, 'name':''}\n",
+    "fold_ex_dt_j = {0:2607, 1:2608, 2:2611, 3:2615, 4:2618, 'name':''}\n",
+    "\n",
+    "fold_ex_dt_k = {0:902, 1:903, 2:915, 3:921, 4:926, 'name':''}\n",
+    "fold_ex_dt_l = {0:904, 1:905, 2:914, 3:919, 4:924, 'name':''}\n",
+    "fold_ex_dt_m = {0:906, 1:907, 2:918, 3:925, 4:930, 'name':''}\n",
+    "fold_ex_dt_n = {0:908, 1:909, 2:916, 3:923, 4:929, 'name':''}\n",
+    "fold_ex_dt_o = {0:910, 1:911, 2:920, 3:927, 4:931, 'name':''}\n",
+    "fold_ex_dt_p = {0:912, 1:913, 2:917, 3:922, 4:928, 'name':''}\n",
+    "\n",
+    "fold_ex_dt_ls = [fold_ex_dt_k, fold_ex_dt_l, fold_ex_dt_m, fold_ex_dt_n, fold_ex_dt_o, fold_ex_dt_p]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def ensemble_4folds_testing(fold_ex_dt_ls):\n",
+    "    parent_dir = '/home/jjia/data/lung_function/lung_function/scripts/results/experiments/'\n",
+    "\n",
+    "    for fold_ex_dt in fold_ex_dt_ls:\n",
+    "        dir0 = parent_dir + str(fold_ex_dt[0])\n",
+    "        ave_fpath =dir0  + '/test_pred.csv'\n",
+    "        output_file_path = Path(ave_fpath)\n",
+    "        output_file_path.parent.mkdir(parents=True, exist_ok=True)\n",
+    "        \n",
+    "        df_ls = []\n",
+    "        for i in [1,2,3,4]:\n",
+    "            data_fpath = parent_dir + str(fold_ex_dt[i]) + '/test_pred.csv'\n",
+    "            df = pd.read_csv(data_fpath,index_col=0)\n",
+    "            df_ls.append(df)\n",
+    "        df_ave = (df_ls[0] + df_ls[1] + df_ls[2] + df_ls[3])/4\n",
+    "        df_ave.to_csv(ave_fpath)\n",
+    "        print(ave_fpath)\n",
     "\n",
     "        \n",
     "        "
@@ -65,162 +95,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>pat_id</th>\n",
-       "      <th>FVC</th>\n",
-       "      <th>DLCOc_SB</th>\n",
-       "      <th>FEV1</th>\n",
-       "      <th>TLC_He</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>7957098.0</td>\n",
-       "      <td>2.99525</td>\n",
-       "      <td>5.08500</td>\n",
-       "      <td>2.37750</td>\n",
-       "      <td>4.58750</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>7977032.0</td>\n",
-       "      <td>3.50225</td>\n",
-       "      <td>5.72200</td>\n",
-       "      <td>2.73925</td>\n",
-       "      <td>5.24625</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>8077626.0</td>\n",
-       "      <td>3.24600</td>\n",
-       "      <td>5.30175</td>\n",
-       "      <td>2.49025</td>\n",
-       "      <td>4.92250</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>8160998.0</td>\n",
-       "      <td>3.49725</td>\n",
-       "      <td>5.78500</td>\n",
-       "      <td>2.76350</td>\n",
-       "      <td>5.28725</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>8189796.0</td>\n",
-       "      <td>2.69725</td>\n",
-       "      <td>4.46400</td>\n",
-       "      <td>2.09725</td>\n",
-       "      <td>4.15100</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>57</th>\n",
-       "      <td>9523013.0</td>\n",
-       "      <td>3.31050</td>\n",
-       "      <td>5.35650</td>\n",
-       "      <td>2.59950</td>\n",
-       "      <td>4.96725</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>58</th>\n",
-       "      <td>9662556.0</td>\n",
-       "      <td>3.14600</td>\n",
-       "      <td>5.34900</td>\n",
-       "      <td>2.53650</td>\n",
-       "      <td>4.66800</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>59</th>\n",
-       "      <td>9861781.0</td>\n",
-       "      <td>3.16400</td>\n",
-       "      <td>5.12900</td>\n",
-       "      <td>2.43700</td>\n",
-       "      <td>4.81275</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>60</th>\n",
-       "      <td>9934096.0</td>\n",
-       "      <td>2.96500</td>\n",
-       "      <td>4.85575</td>\n",
-       "      <td>2.27900</td>\n",
-       "      <td>4.56625</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>61</th>\n",
-       "      <td>9939136.0</td>\n",
-       "      <td>2.47100</td>\n",
-       "      <td>4.12175</td>\n",
-       "      <td>1.96650</td>\n",
-       "      <td>3.78050</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>62 rows × 5 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "       pat_id      FVC  DLCOc_SB     FEV1   TLC_He\n",
-       "0   7957098.0  2.99525   5.08500  2.37750  4.58750\n",
-       "1   7977032.0  3.50225   5.72200  2.73925  5.24625\n",
-       "2   8077626.0  3.24600   5.30175  2.49025  4.92250\n",
-       "3   8160998.0  3.49725   5.78500  2.76350  5.28725\n",
-       "4   8189796.0  2.69725   4.46400  2.09725  4.15100\n",
-       "..        ...      ...       ...      ...      ...\n",
-       "57  9523013.0  3.31050   5.35650  2.59950  4.96725\n",
-       "58  9662556.0  3.14600   5.34900  2.53650  4.66800\n",
-       "59  9861781.0  3.16400   5.12900  2.43700  4.81275\n",
-       "60  9934096.0  2.96500   4.85575  2.27900  4.56625\n",
-       "61  9939136.0  2.47100   4.12175  1.96650  3.78050\n",
-       "\n",
-       "[62 rows x 5 columns]"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/home/jjia/data/lung_function/lung_function/scripts/results/experiments/2605/test_pred.csv\n",
+      "/home/jjia/data/lung_function/lung_function/scripts/results/experiments/2607/test_pred.csv\n"
+     ]
     }
    ],
    "source": [
-    "df_ave.to"
+    "ensemble_4folds_testing(fold_ex_dt_ls)"
    ]
   },
   {
