--- a/lung_function/scripts/jupyter_notebooks/merge_4fold_testing.ipynb
+++ b/lung_function/scripts/jupyter_notebooks/merge_4fold_testing.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,12 +62,22 @@
     "fold_ex_dt_o = {0:910, 1:911, 2:920, 3:927, 4:931, 'name':''}\n",
     "fold_ex_dt_p = {0:912, 1:913, 2:917, 3:922, 4:928, 'name':''}\n",
     "\n",
-    "fold_ex_dt_ls = [fold_ex_dt_k, fold_ex_dt_l, fold_ex_dt_m, fold_ex_dt_n, fold_ex_dt_o, fold_ex_dt_p]"
+    "fold_ex_dt_k = {0:2258, 1:2259, 2:2269, 3:2271, 4:2272, 'name':''}\n",
+    "fold_ex_dt_l = {0:2140, 1:2141, 2:2162, 3:2175, 4:2191, 'name':''}\n",
+    "fold_ex_dt_m = {0:2138, 1:2139, 2:2160, 3:2173, 4:2190, 'name':''}\n",
+    "fold_ex_dt_n = {0:2148, 1:2149, 2:2159, 3:2172, 4:2189, 'name':''}\n",
+    "fold_ex_dt_o = {0:2144, 1:2145, 2:2158, 3:2171, 4:2185, 'name':''}\n",
+    "fold_ex_dt_p = {0:2142, 1:2143, 2:2154, 3:2167, 4:2180, 'name':''}\n",
+    "\n",
+    "fold_ex_dt_q = {0:2194, 1:2195, 2:2249, 3:2262, 4:2270, 'name':''}\n",
+    "fold_ex_dt_q = {0:429, 1:430, 2:432, 3:434, 4:436, 'name':''}\n",
+    "\n",
+    "fold_ex_dt_ls = [fold_ex_dt_q]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,15 +105,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/home/jjia/data/lung_function/lung_function/scripts/results/experiments/2605/test_pred.csv\n",
-      "/home/jjia/data/lung_function/lung_function/scripts/results/experiments/2607/test_pred.csv\n"
+      "/home/jjia/data/lung_function/lung_function/scripts/results/experiments/2194/test_pred.csv\n"
      ]
     }
    ],
