--- a/lung_function/scripts/jupyter_notebooks/merge_4fold_testing.ipynb
+++ b/lung_function/scripts/jupyter_notebooks/merge_4fold_testing.ipynb
@@ -27,57 +27,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
     "# for new experiments\n",
-    "fold_ex_dt_1 = {0:2521, 1:2522, 2:2531, 3:2544, 4:2545, 'name':''}\n",
-    "fold_ex_dt_2 = {0:2527, 1:2528, 2:2546, 3:2556, 4:2566, 'name':''}\n",
-    "fold_ex_dt_3 = {0:2529, 1:2530, 2:2547, 3:2557, 4:2567, 'name':''}\n",
-    "fold_ex_dt_4 = {0:2532, 1:2533, 2:2548, 3:2558, 4:2579, 'name':''}\n",
+    "b_ls = [{0:2521, 1:2522, 2:2531, 3:2544, 4:2545, 'name':''}]\n",
+    "b_ls.append({0:2527, 1:2528, 2:2546, 3:2556, 4:2566, 'name':''})\n",
+    "b_ls.append({0:2529, 1:2530, 2:2547, 3:2557, 4:2567, 'name':''})\n",
+    "b_ls.append({0:2532, 1:2533, 2:2548, 3:2558, 4:2579, 'name':''})\n",
     "\n",
-    "fold_ex_dt_5 = {0:2534, 1:2535, 2:2553, 3:2563, 4:2588, 'name':''}\n",
-    "fold_ex_dt_6 = {0:2536, 1:2537, 2:2552, 3:2562, 4:2587, 'name':''}\n",
-    "fold_ex_dt_7 = {0:2538, 1:2539, 2:2551, 3:2561, 4:2586, 'name':''}\n",
-    "fold_ex_dt_8 = {0:2540, 1:2541, 2:2549, 3:2559, 4:2578, 'name':''}\n",
+    "b_ls.append({0:2534, 1:2535, 2:2553, 3:2563, 4:2588, 'name':''})\n",
+    "b_ls.append({0:2536, 1:2537, 2:2552, 3:2562, 4:2587, 'name':''})\n",
+    "b_ls.append({0:2538, 1:2539, 2:2551, 3:2561, 4:2586, 'name':''})\n",
+    "b_ls.append({0:2540, 1:2541, 2:2549, 3:2559, 4:2578, 'name':''})\n",
     "\n",
-    "fold_ex_dt_a = {0:2542, 1:2543, 2:2550, 3:2560, 4:2581, 'name':''}\n",
-    "fold_ex_dt_b = {0:2568, 1:2569, 2:2580, 3:2590, 4:2599, 'name':''}\n",
-    "fold_ex_dt_c = {0:2570, 1:2571, 2:2582, 3:2589, 4:2597, 'name':''}\n",
-    "fold_ex_dt_d = {0:2572, 1:2573, 2:2583, 3:2592, 4:2598, 'name':''}\n",
+    "b_ls.append({0:2542, 1:2543, 2:2550, 3:2560, 4:2581, 'name':''})\n",
+    "b_ls.append({0:2568, 1:2569, 2:2580, 3:2590, 4:2599, 'name':''})\n",
+    "b_ls.append({0:2570, 1:2571, 2:2582, 3:2589, 4:2597, 'name':''})\n",
+    "b_ls.append({0:2572, 1:2573, 2:2583, 3:2592, 4:2598, 'name':''})\n",
     "\n",
-    "fold_ex_dt_e = {0:2574, 1:2575, 2:2585, 3:2593, 4:2602, 'name':''}\n",
-    "fold_ex_dt_f = {0:2576, 1:2577, 2:2584, 3:2591, 4:2596, 'name':''}\n",
-    "fold_ex_dt_g = {0:2594, 1:2595, 2:2604, 3:2612, 4:2616, 'name':''}\n",
-    "fold_ex_dt_h = {0:2600, 1:2601, 2:2603, 3:2609, 4:2613, 'name':''}\n",
+    "b_ls.append({0:2574, 1:2575, 2:2585, 3:2593, 4:2602, 'name':''})\n",
+    "b_ls.append({0:2576, 1:2577, 2:2584, 3:2591, 4:2596, 'name':''})\n",
+    "b_ls.append({0:2594, 1:2595, 2:2604, 3:2612, 4:2616, 'name':''})\n",
+    "b_ls.append({0:2600, 1:2601, 2:2603, 3:2609, 4:2613, 'name':''})\n",
     "\n",
-    "fold_ex_dt_i = {0:2605, 1:2606, 2:2610, 3:2614, 4:2617, 'name':''}\n",
-    "fold_ex_dt_j = {0:2607, 1:2608, 2:2611, 3:2615, 4:2618, 'name':''}\n",
+    "b_ls.append({0:2605, 1:2606, 2:2610, 3:2614, 4:2617, 'name':''})\n",
+    "b_ls.append({0:2607, 1:2608, 2:2611, 3:2615, 4:2618, 'name':''})\n",
     "\n",
-    "fold_ex_dt_k = {0:902, 1:903, 2:915, 3:921, 4:926, 'name':''}\n",
-    "fold_ex_dt_l = {0:904, 1:905, 2:914, 3:919, 4:924, 'name':''}\n",
-    "fold_ex_dt_m = {0:906, 1:907, 2:918, 3:925, 4:930, 'name':''}\n",
-    "fold_ex_dt_n = {0:908, 1:909, 2:916, 3:923, 4:929, 'name':''}\n",
-    "fold_ex_dt_o = {0:910, 1:911, 2:920, 3:927, 4:931, 'name':''}\n",
-    "fold_ex_dt_p = {0:912, 1:913, 2:917, 3:922, 4:928, 'name':''}\n",
+    "b_ls.append({0:902, 1:903, 2:915, 3:921, 4:926, 'name':''})\n",
+    "b_ls.append({0:904, 1:905, 2:914, 3:919, 4:924, 'name':''})\n",
+    "b_ls.append({0:906, 1:907, 2:918, 3:925, 4:930, 'name':''})\n",
+    "b_ls.append({0:908, 1:909, 2:916, 3:923, 4:929, 'name':''})\n",
+    "b_ls.append({0:910, 1:911, 2:920, 3:927, 4:931, 'name':''})\n",
+    "b_ls.append({0:912, 1:913, 2:917, 3:922, 4:928, 'name':''})\n",
     "\n",
-    "fold_ex_dt_k = {0:2258, 1:2259, 2:2269, 3:2271, 4:2272, 'name':''}\n",
-    "fold_ex_dt_l = {0:2140, 1:2141, 2:2162, 3:2175, 4:2191, 'name':''}\n",
-    "fold_ex_dt_m = {0:2138, 1:2139, 2:2160, 3:2173, 4:2190, 'name':''}\n",
-    "fold_ex_dt_n = {0:2148, 1:2149, 2:2159, 3:2172, 4:2189, 'name':''}\n",
-    "fold_ex_dt_o = {0:2144, 1:2145, 2:2158, 3:2171, 4:2185, 'name':''}\n",
-    "fold_ex_dt_p = {0:2142, 1:2143, 2:2154, 3:2167, 4:2180, 'name':''}\n",
+    "b_ls.append({0:2258, 1:2259, 2:2269, 3:2271, 4:2272, 'name':''})\n",
+    "b_ls.append({0:2140, 1:2141, 2:2162, 3:2175, 4:2191, 'name':''})\n",
+    "b_ls.append({0:2138, 1:2139, 2:2160, 3:2173, 4:2190, 'name':''})\n",
+    "b_ls.append({0:2148, 1:2149, 2:2159, 3:2172, 4:2189, 'name':''})\n",
+    "b_ls.append({0:2144, 1:2145, 2:2158, 3:2171, 4:2185, 'name':''})\n",
+    "b_ls.append({0:2142, 1:2143, 2:2154, 3:2167, 4:2180, 'name':''})\n",
     "\n",
-    "fold_ex_dt_q = {0:2194, 1:2195, 2:2249, 3:2262, 4:2270, 'name':''}\n",
-    "fold_ex_dt_q = {0:429, 1:430, 2:432, 3:434, 4:436, 'name':''}\n",
+    "b_ls.append({0:2194, 1:2195, 2:2249, 3:2262, 4:2270, 'name':''})\n",
+    "b_ls.append({0:429, 1:430, 2:432, 3:434, 4:436, 'name':''})\n",
     "\n",
-    "fold_ex_dt_ls = [fold_ex_dt_q]"
+    "b_ls.append({0:2667, 1:2668, 2:2679, 3:2690, 4:2701, 'name':''})\n",
+    "b_ls.append({0:2665, 1:2666, 2:2677, 3:2688, 4:2699, 'name':''})\n",
+    "b_ls.append({0:2663, 1:2664, 2:2678, 3:2689, 4:2700, 'name':''})\n",
+    "b_ls.append({0:2661, 1:2662, 2:2676, 3:2687, 4:2698, 'name':''})\n",
+    "b_ls.append({0:2655, 1:2658, 2:2675, 3:2686, 4:2697, 'name':''})\n",
+    "b_ls.append({0:2654, 1:2657, 2:2674, 3:2685, 4:2696, 'name':''})\n",
+    "b_ls.append({0:2651, 1:2652, 2:2672, 3:2683, 4:2691, 'name':''})\n",
+    "b_ls.append({0:2649, 1:2650, 2:2670, 3:2682, 4:2693, 'name':''})\n",
+    "b_ls.append({0:2647, 1:2648, 2:2669, 3:2680, 4:2692, 'name':''})\n",
+    "b_ls.append({0:2645, 1:2646, 2:2673, 3:2684, 4:2695, 'name':''})\n",
+    "b_ls.append({0:2643, 1:2644, 2:2671, 3:2681, 4:2694, 'name':''})\n",
+    "\n",
+    "\n",
+    "fold_ex_dt_ls = b_ls"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,19 +118,124 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/home/jjia/data/lung_function/lung_function/scripts/results/experiments/2194/test_pred.csv\n"
+      "/home/jjia/data/lung_function/lung_function/scripts/results/experiments/2667/test_pred.csv\n",
+      "/home/jjia/data/lung_function/lung_function/scripts/results/experiments/2665/test_pred.csv\n",
+      "/home/jjia/data/lung_function/lung_function/scripts/results/experiments/2663/test_pred.csv\n",
+      "/home/jjia/data/lung_function/lung_function/scripts/results/experiments/2661/test_pred.csv\n",
+      "/home/jjia/data/lung_function/lung_function/scripts/results/experiments/2655/test_pred.csv\n",
+      "/home/jjia/data/lung_function/lung_function/scripts/results/experiments/2654/test_pred.csv\n",
+      "/home/jjia/data/lung_function/lung_function/scripts/results/experiments/2651/test_pred.csv\n",
+      "/home/jjia/data/lung_function/lung_function/scripts/results/experiments/2649/test_pred.csv\n",
+      "/home/jjia/data/lung_function/lung_function/scripts/results/experiments/2647/test_pred.csv\n",
+      "/home/jjia/data/lung_function/lung_function/scripts/results/experiments/2645/test_pred.csv\n",
+      "/home/jjia/data/lung_function/lung_function/scripts/results/experiments/2643/test_pred.csv\n"
      ]
     }
    ],
    "source": [
     "ensemble_4folds_testing(fold_ex_dt_ls)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def ensemble_4folds_validation(fold_ex_dt_ls):\n",
+    "    parent_dir = '/home/jjia/data/lung_function/lung_function/scripts/results/experiments/'\n",
+    "\n",
+    "    for fold_ex_dt in fold_ex_dt_ls:\n",
+    "        dir0 = parent_dir + str(fold_ex_dt[0])\n",
+    "        pred_all_fpath = dir0  + '/valid_pred.csv'\n",
+    "        label_all_fpath = dir0  + '/valid_label.csv'\n",
+    "        output_file_path = Path(pred_all_fpath)\n",
+    "        output_file_path.parent.mkdir(parents=True, exist_ok=True)\n",
+    "        \n",
+    "        df_pred_ls, df_label_ls = [], []\n",
+    "        for i in [1,2,3,4]:\n",
+    "            data_fpath = parent_dir + str(fold_ex_dt[i]) + '/valid_pred.csv'\n",
+    "            label_fpath = parent_dir + str(fold_ex_dt[i]) + '/valid_label.csv'\n",
+    "            df_pred = pd.read_csv(data_fpath,index_col=0)\n",
+    "            df_label = pd.read_csv(label_fpath,index_col=0)\n",
+    "\n",
+    "            df_pred_ls.append(df_pred)\n",
+    "            df_label_ls.append(df_label)\n",
+    "        df_pred_valid = pd.concat(df_pred_ls)\n",
+    "        df_label_valid = pd.concat(df_label_ls)\n",
+    "        \n",
+    "        df_pred_valid.to_csv(pred_all_fpath)\n",
+    "        df_label_valid.to_csv(label_all_fpath)\n",
+    "        print(pred_all_fpath)\n",
+    "\n",
+    "        \n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/home/jjia/data/lung_function/lung_function/scripts/results/experiments/2521/valid_pred.csv\n",
+      "/home/jjia/data/lung_function/lung_function/scripts/results/experiments/2527/valid_pred.csv\n",
+      "/home/jjia/data/lung_function/lung_function/scripts/results/experiments/2529/valid_pred.csv\n",
+      "/home/jjia/data/lung_function/lung_function/scripts/results/experiments/2532/valid_pred.csv\n",
+      "/home/jjia/data/lung_function/lung_function/scripts/results/experiments/2534/valid_pred.csv\n",
+      "/home/jjia/data/lung_function/lung_function/scripts/results/experiments/2536/valid_pred.csv\n",
+      "/home/jjia/data/lung_function/lung_function/scripts/results/experiments/2538/valid_pred.csv\n",
+      "/home/jjia/data/lung_function/lung_function/scripts/results/experiments/2540/valid_pred.csv\n",
+      "/home/jjia/data/lung_function/lung_function/scripts/results/experiments/2542/valid_pred.csv\n",
+      "/home/jjia/data/lung_function/lung_function/scripts/results/experiments/2568/valid_pred.csv\n",
+      "/home/jjia/data/lung_function/lung_function/scripts/results/experiments/2570/valid_pred.csv\n",
+      "/home/jjia/data/lung_function/lung_function/scripts/results/experiments/2572/valid_pred.csv\n",
+      "/home/jjia/data/lung_function/lung_function/scripts/results/experiments/2574/valid_pred.csv\n",
+      "/home/jjia/data/lung_function/lung_function/scripts/results/experiments/2576/valid_pred.csv\n",
+      "/home/jjia/data/lung_function/lung_function/scripts/results/experiments/2594/valid_pred.csv\n",
+      "/home/jjia/data/lung_function/lung_function/scripts/results/experiments/2600/valid_pred.csv\n",
+      "/home/jjia/data/lung_function/lung_function/scripts/results/experiments/2605/valid_pred.csv\n",
+      "/home/jjia/data/lung_function/lung_function/scripts/results/experiments/2607/valid_pred.csv\n",
+      "/home/jjia/data/lung_function/lung_function/scripts/results/experiments/902/valid_pred.csv\n",
+      "/home/jjia/data/lung_function/lung_function/scripts/results/experiments/904/valid_pred.csv\n",
+      "/home/jjia/data/lung_function/lung_function/scripts/results/experiments/906/valid_pred.csv\n",
+      "/home/jjia/data/lung_function/lung_function/scripts/results/experiments/908/valid_pred.csv\n",
+      "/home/jjia/data/lung_function/lung_function/scripts/results/experiments/910/valid_pred.csv\n",
+      "/home/jjia/data/lung_function/lung_function/scripts/results/experiments/912/valid_pred.csv\n",
+      "/home/jjia/data/lung_function/lung_function/scripts/results/experiments/2258/valid_pred.csv\n",
+      "/home/jjia/data/lung_function/lung_function/scripts/results/experiments/2140/valid_pred.csv\n",
+      "/home/jjia/data/lung_function/lung_function/scripts/results/experiments/2138/valid_pred.csv\n",
+      "/home/jjia/data/lung_function/lung_function/scripts/results/experiments/2148/valid_pred.csv\n",
+      "/home/jjia/data/lung_function/lung_function/scripts/results/experiments/2144/valid_pred.csv\n",
+      "/home/jjia/data/lung_function/lung_function/scripts/results/experiments/2142/valid_pred.csv\n",
+      "/home/jjia/data/lung_function/lung_function/scripts/results/experiments/2194/valid_pred.csv\n",
+      "/home/jjia/data/lung_function/lung_function/scripts/results/experiments/429/valid_pred.csv\n",
+      "/home/jjia/data/lung_function/lung_function/scripts/results/experiments/2667/valid_pred.csv\n",
+      "/home/jjia/data/lung_function/lung_function/scripts/results/experiments/2665/valid_pred.csv\n",
+      "/home/jjia/data/lung_function/lung_function/scripts/results/experiments/2663/valid_pred.csv\n",
+      "/home/jjia/data/lung_function/lung_function/scripts/results/experiments/2661/valid_pred.csv\n",
+      "/home/jjia/data/lung_function/lung_function/scripts/results/experiments/2655/valid_pred.csv\n",
+      "/home/jjia/data/lung_function/lung_function/scripts/results/experiments/2654/valid_pred.csv\n",
+      "/home/jjia/data/lung_function/lung_function/scripts/results/experiments/2651/valid_pred.csv\n",
+      "/home/jjia/data/lung_function/lung_function/scripts/results/experiments/2649/valid_pred.csv\n",
+      "/home/jjia/data/lung_function/lung_function/scripts/results/experiments/2647/valid_pred.csv\n",
+      "/home/jjia/data/lung_function/lung_function/scripts/results/experiments/2645/valid_pred.csv\n",
+      "/home/jjia/data/lung_function/lung_function/scripts/results/experiments/2643/valid_pred.csv\n"
+     ]
+    }
+   ],
+   "source": [
+    "ensemble_4folds_validation(fold_ex_dt_ls)"
    ]
   },
   {
